--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css');
+
+/* First, declare your dark mode colors */
+:root {
+    --c-bg: #fff;
+    --c-text: #000;
+  }
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --c-bg: #000;
+      --c-text: #fff;
+    }
+  }
+
+  @supports not (color-scheme: light dark) {
+    html {
+      background: var(--c-bg);
+      color: var(--c-text);
+    }
+  }
+
+  /* For browsers that support automatic dark/light mode
+   As well as system colors, set those */
+@supports (color-scheme: light dark)
+  and (background-color: Canvas)
+  and (color: CanvasText) {
+  :root {
+    --c-bg: Canvas;
+    --c-text: CanvasText;
+  }
+}
+
+/* For Safari on iOS. Hacky, but it works. */
+@supports (background-color: -apple-system-control-background)
+  and (color: text) {
+  :root {
+    --c-bg: -apple-system-control-background;
+    --c-text: text;
+  }
+}
+.margin-20{
+    margin: 20px;
+}
+.part{
+    margin-bottom: 20px;
+}
